feat: level laptop, ignore zcompdump

--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -4,5 +4,6 @@
     "workbench.sideBar.location": "right",
     "editor.fontFamily": "FiraCode Nerd Font Mono",
     "editor.minimap.enabled": false,
-    "workbench.activityBar.location": "top"
+    "workbench.activityBar.location": "top",
+    "git.openRepositoryInParentFolders": "never"
 }
