--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -5,5 +5,6 @@
     "editor.fontFamily": "FiraCode Nerd Font Mono",
     "editor.minimap.enabled": false,
     "workbench.activityBar.location": "top",
-    "git.openRepositoryInParentFolders": "never"
+    "git.openRepositoryInParentFolders": "never",
+    "git.autofetch": true
 }
